<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/inicio"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/registrar_usuario"
            android:icon="@drawable/ic_account_circle_black_24dp"
            android:title="@string/menu_gallery" />
        <item
            android:id="@+id/registrar_vehiculo"
            android:icon="@drawable/carros"
            android:title="@string/menu_slideshow" />
        <item
            android:id="@+id/actualizar_datos"
            android:icon="@drawable/ic_party_mode_black_24dp"
            android:title="@string/menu_tools" />
        <item
            android:id="@+id/ver_agenda"
            android:icon="@drawable/solicitud"
            android:title="@string/menu_ver" />
        <item
            android:id="@+id/eliminar_datos"
            android:icon="@drawable/ic_delete_forever_black_24dp"
            android:title="@string/menu_share" />
        <item
            android:id="@+id/cerrarSesion"
            android:icon="@drawable/cerrar"
            android:title="@string/menu_send" />

    </group>

    <item android:title="Preguntas Frecuentes">

    </item>

</menu>
