<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/inicio">

    <fragment
        android:id="@+id/inicio"
        android:name="com.example.aplicacion.fragments.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/registrar_usuario"
        android:name="com.example.aplicacion.fragments.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/registrar_vehiculo"
        android:name="com.example.aplicacion.fragments.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/actualizar_datos"
        android:name="com.example.aplicacion.fragments.ToolsFragment"
        android:label="@string/menu_tools"
        tools:layout="@layout/fragment_tools" />

    <fragment
        android:id="@+id/ver_agenda"
        android:name="com.example.aplicacion.fragments.ShareFragment"
        android:label="@string/menu_ver"
        tools:layout="@layout/fragment_share" />

    <fragment
        android:id="@+id/eliminar_datos"
        android:name="com.example.aplicacion.fragments.SendFragment"
        android:label="@string/menu_share"
        tools:layout="@layout/fragment_send" />
    <fragment
        android:id="@+id/cerrarSesion"
        android:name="com.example.aplicacion.fragments.cerrarSesion"
        android:label="@string/menu_send"
        tools:layout="@layout/fragment_cerrar_sesion" />
</navigation>